syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./proto";

service StockService {
    rpc UpdateStock(UpdateStockRequest) returns (google.protobuf.Empty){};
}

message UpdateStockRequest {
    int32 id = 1;
    int32 product_id = 2;
    int32 stock = 3;
    int32 lock = 4;
}